# badseed

./: .gitignore  GEMINI.md  LICENSE  README.md  badseed.py  config.json  justfile  pyproject.toml
